# stardb-exporter

./: .env  .gitignore  Cargo.toml  Readme.md  build.rs  flake.nix  gi_keys.json  hsr_keys.json  justfile  keys.json  patch.py
.github/workflows/: build.yml  clippy.yml  release.yml
keys/: hsr.json
src/: app.rs  main.rs  pcapng.rs
src/games/: gi.rs  hsr.rs  mod.rs  zzz.rs
src/themes/: classic.rs  dark.rs  light.rs  mod.rs
src/ui/: achievements.rs  decorations.rs  error.rs  game.rs  header.rs  login.rs  menu.rs  mod.rs  pull_menu.rs  pulls.rs  waiting.rs
src/widgets/: decorations.rs  mod.rs
