[package]
name = "stardb-exporter"
version = "2.11.5"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
arboard = "3.6.0"
auto-artifactarium = { git = "https://github.com/hashblen/auto-artifactarium", version = "1.1.0" }
base64 = "0.22.1"
eframe = { version = "0.32.0", features = ["persistence"] }
egui = "0.32.0"
egui-notify = "0.20.0"
egui_extras = { version = "0.32.0", features = ["all_loaders"] }
pcap = "2.3.0"
regex = "1.11.1"
auto-reliquary = { git = "https://github.com/hashblen/auto-reliquary", version = "1.1.0" }
rfd = "0.15.4"
self_update = { version = "0.42.0", features = [
    "archive-zip",
    "compression-zip-deflate",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
ureq = { version = "3.0.12", features = ["json"] }
egui-remixicon = "0.31.1"
open = "5.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"

[build-dependencies]
winresource = "0.1.23"
