[package]
name = "stardb-exporter"
version = "2.13.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
auto-artifactarium = { git = "https://github.com/hashblen/auto-artifactarium", version = "1.1.0" }
base64 = "0.22.1"
eframe = { version = "0.33.0", features = ["persistence"] }
egui = "0.33.0"
egui-notify = "0.21.0"
egui_extras = { version = "0.33.0", features = ["all_loaders"] }
pcap = "2.3.0"
regex = "1.12.2"
auto-reliquary = { git = "https://github.com/hashblen/auto-reliquary", version = "1.1.0" }
rfd = "0.15.4"
self_update = { version = "0.42.0", features = [
    "archive-zip",
    "compression-zip-deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "3.1.2", features = ["json"] }
egui-remixicon = "0.31.1"
open = "5.3.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"

[build-dependencies]
winresource = "0.1.27"
