[package]
name = "stardb-exporter"
version = "2.16.1"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
arboard = "3.6.1"
auto-artifactarium = { git = "https://github.com/hashblen/auto-artifactarium", version = "1.1.0" }
base64 = "0.22.1"
eframe = { version = "0.33.3", features = ["persistence"] }
egui = "0.33.3"
egui-notify = "0.21.0"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
pcap = { version = "2.4.0", optional = true }
regex = "1.12.3"
auto-reliquary = { git = "https://github.com/hashblen/auto-reliquary", version = "1.1.0" }
rfd = "0.17.2"
self_update = { version = "0.42.0", features = [
    "archive-zip",
    "compression-zip-deflate",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ureq = { version = "3.2.0", features = ["json"] }
egui-remixicon = "0.33.1"
open = "5.3.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
pktmon = { version = "0.6.2", optional = true }
windows = { version = "0.62.2", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_Foundation",
    "Win32_System_Console",
], optional = true }

[build-dependencies]
winresource = "0.1.30"

[features]
pktmon = ["dep:pktmon", "dep:windows"]
pcap = ["dep:pcap"]
